Bookshelf from final HW fix 1