@@ -2,24 +2,29 @@ package com.startjava.lesson_2_3_4.bookshelf;
 
 import static com.startjava.lesson_2_3_4.bookshelf.BookshelfTest.CURR_YEAR;
 
+import java.time.Year;
+
 public class Book {
+    public static final int MIN_PUBLISHING_YEAR = 1800;
+
     private final String author;
     private final String title;
-    private final int year;
+    private final Year publishingYear;
 
-    public Book(String author, String title, int year) {
-        if (author == null || author.trim().isEmpty()) {
+    public Book(String author, String title, int publishingYear) {
+        if (author == null || author.isBlank()) {
             throw new IllegalArgumentException("Ошибка: не указан автор книги");
         }
-        if (title == null || title.trim().isEmpty()) {
+        if (title == null || title.isBlank()) {
             throw new IllegalArgumentException("Ошибка: не указано название книги");
         }
-        if (year < 1800 || year > CURR_YEAR) {
-            throw new IllegalArgumentException("Ошибка: год издания должен быть между 1800 и " + CURR_YEAR);
+        if (publishingYear < MIN_PUBLISHING_YEAR || publishingYear > CURR_YEAR) {
+            throw new IllegalArgumentException("Ошибка: год издания должен быть между " +
+                    MIN_PUBLISHING_YEAR + " и " + CURR_YEAR);
         }
         this.author = author.trim();
         this.title = title.trim();
-        this.year = year;
+        this.publishingYear = Year.of(publishingYear);
     }
 
     public String getAuthor() {
@@ -30,12 +35,12 @@ public class Book {
         return title;
     }
 
-    public int getYear() {
-        return year;
+    public Year getPublishingYear() {
+        return publishingYear;
     }
 
     @Override
     public String toString() {
-        return (this.author + ", " + this.title + ", " + this.year);
+        return author + ", " + title + ", " + publishingYear;
     }
 }
